tests/invalid/data_loader_invalid_type.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderInvalidKind",
    "description": "Test case: data loader with invalid kind (not one of: grid, points, static)",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadLoader": {
      "kind": "invalid_kind",
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" },
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
